wip : set up crud

--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -12,12 +12,12 @@
       />
     </div>
     <div class="form-block">
-      <label for="content">Content:</label>
+      <label for="body">Body:</label>
       <input
-        id="content"
+        id="body"
         type="text"
-        placeholder="content"
-        formControlName="content"
+        placeholder="body"
+        formControlName="body"
       />
     </div>
     <div class="form-block">
