--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -2,6 +2,6 @@
   <img class="image" src="{{ post?.image }}" alt="" />
   <div class="text-content">
     <h1 class="post-title">{{ post?.title }}</h1>
-    <p class="post-content">{{ post?.content }}</p>
+    <p class="post-body">{{ post?.body }}</p>
   </div>
 </div>
