--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -2,6 +2,6 @@
   <div class="card-content">
     <img class="image" src="{{ post.image }}" alt="" />
     <h3>{{ post.title }}</h3>
-    <p>{{ post.content }}</p>
+    <p>{{ post.body }}</p>
   </div>
 </div>
