--- a/src/app/comment-list/comment-list.component.scss
+++ b/src/app/comment-list/comment-list.component.scss
@@ -18,44 +18,32 @@
     .comment-card {
       display: flex;
       flex-direction: column;
-      padding: 1rem;
-      border: none;
-      border-radius: 0.5rem;
+      border: 1px solid lightgrey;
       box-shadow: none;
-      border: 0.1rem solid lightgray;
 
-      &:hover {
-        box-shadow: 0px 0px 5px lightgrey;
+      .comment-header {
+        width: 100%;
+        height: 2rem;
+        background-color: #355591;
+        color: white;
+        font-size: 0.8rem;
+
+        .header-content {
+          padding: 0.5rem;
+        }
       }
-      .image {
-        height: 5rem;
-        width: 10rem;
+    }
+    .comment-card:first-of-type {
+      border-radius: 0.5rem 0.5rem 0rem 0rem;
+
+      .comment-header{
+        border-radius: 0.5rem 0.5rem 0rem 0rem;
       }
-      .card-content {
-        margin: auto;
-        text-align: center;
-      }
+    }
+    .no-comment-msg {
+      text-align: center;
+      font-weight: bold;
+      color: grey;
     }
   }
 }
-// .comment-card {
-//   display: flex;
-//   flex-direction: column;
-//   padding: 1rem;
-//   border: none;
-//   border-radius: 0.5rem;
-//   box-shadow: none;
-//   border: 0.1rem solid lightgray;
-
-//   &:hover {
-//     box-shadow: 0px 0px 5px lightgrey;
-//   }
-//   .image {
-//     height: 5rem;
-//     width: 10rem;
-//   }
-//   .card-content {
-//     margin: auto;
-//     text-align: center;
-//   }
-// }
