--- a/src/app/new-post/new-post.component.scss
+++ b/src/app/new-post/new-post.component.scss
@@ -13,8 +13,37 @@
 
     .form-block {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       gap: 1rem;
+
+      .title-input{
+        width: 20rem;
+        height: 2rem;
+        border: 1px solid skyblue;
+        border-radius: 0.5rem;
+      }
+
+      .body-input {
+        width: 100%;
+        height: 20rem;
+        border: 1px solid skyblue;
+        border-radius: 0.5rem;
+        resize: none;
+      }
+      .image-input{
+        width: 20rem;
+        height: 2rem;
+        border: 1px solid skyblue;
+        border-radius: 0.5rem;
+      }
+    }
+    .publish-btn{
+      width: 10rem;
+      height: 2rem;
+      color: white;
+      background-color:skyblue;
+      border: none;
+      border-radius: 0.5rem;
     }
   }
 }
