feat: set up post detail component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@ html {
     margin: 0;
     font-family: "Calibri", sans-serif;
     padding: 0;
-    text-align: center;
+   // text-align: center;
     min-height: 100vh;
     height: 100%;
     overflow-x: hidden;
