--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,9 @@
 <div class="dashboard-component">
   <h2>Dashboard</h2>
 
-<!-- <div *ngIf="auth.user$ | async as user">
-  <p>{{user.name}}</p>
-  <p>{{user.email}}</p>
-
-</div> -->
-
+  <div *ngIf="auth.user$ | async as user">
+    {{ user | json }}
+    <hr />
+    <button (click)="auth.signOut()">Sign Out</button>
+  </div>
 </div>
