feat : update project name

--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,9 +1,9 @@
 <div class="item-list-component">
-  <h2 class="list-title">Item List</h2>
-  <div  *ngFor="let item of items">
+  <h2 class="list-title">Post List</h2>
+  <div  *ngFor="let post of posts">
     <div class="item-block">
-      <h3>{{item.title}}</h3>
-    <p>{{item.content}}</p>
+      <h3>{{post.title}}</h3>
+    <p>{{post.content}}</p>
     </div>
   </div>
 </div>
