--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,20 @@
 <nav class="navbar-component">
   <div class="navbar-content">
     <div class="navbar-brand">
-      <span>ChatBlog Angular</span>
+      <a routerLink="/">ChatBlog Angular</a>
     </div>
     <div class="nav-links">
       <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
       <a routerLink="/dashboard" class="nav-link">Dashboard</a>
       <a routerLink="/signup" class="nav-link">Sign Up</a>
-      <a routerLink="/login" class="nav-link">Log In</a>
+      <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+        <a (click)="logout()" class="nav-link">Log out</a>
+      </ng-container>
+
+      <ng-template #loggedOut>
+        <a (click)="login()" class="nav-link">Log in</a>
+      </ng-template>
     </div>
   </div>
 </nav>
