--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,28 +1,66 @@
 <div class="sign-up-component">
   <h1 class="form-title">Sign Up</h1>
-  <div class="form-block">
-    <label>Username:</label>
-    <input type="text" required />
-  </div>
-  <div class="form-block">
-    <label>Email:</label>
-    <input type="text" required />
-  </div>
-  <div class="form-block">
-    <label>Firstname:</label>
-    <input type="text" required />
-  </div>
-  <div class="form-block">
-    <label>Lastname:</label>
-    <input type="text" required />
-  </div>
-  <div class="form-block">
-    <label>Password:</label>
-    <input type="text" required />
-  </div>
-  <div class="form-block">
-    <label>Confirm Password:</label>
-    <input type="text" required />
-  </div>
-  <button>Sign Up</button>
+  <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
+    Value: {{ signUpForm.value | json }}
+    <div class="form-block">
+      <label for="username">Username:</label>
+      <input
+        id="username"
+        type="text"
+        placeholder="username"
+        formControlName="username"
+        required
+      />
+    </div>
+    <div class="form-block">
+      <label for="email">Email:</label>
+      <input
+        id="email"
+        type="text"
+        placeholder="email"
+        formControlName="email"
+        required
+      />
+    </div>
+    <div class="form-block">
+      <label for="firstname">Firstname:</label>
+      <input
+        id="firstname"
+        type="text"
+        placeholder="firstname"
+        formControlName="firstname"
+        required
+      />
+    </div>
+    <div class="form-block">
+      <label for="lastname">Lastname:</label>
+      <input
+        id="lastname"
+        type="text"
+        placeholder="lastname"
+        formControlName="lastname"
+        required
+      />
+    </div>
+    <div class="form-block">
+      <label for="password">Password:</label>
+      <input
+        id="password"
+        type="password"
+        placeholder="password"
+        formControlName="password"
+        required
+      />
+    </div>
+    <div class="form-block">
+      <label for="confirm-password">Confirm Password:</label>
+      <input
+        id="confirm-password"
+        type="password"
+        placeholder="confirm password"
+        required
+      />
+    </div>
+    <button type="submit">Sign Up</button>
+  </form>
 </div>
