feat : add user id to post on post creation

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,10 @@
 <div class="dashboard-component">
   <h2>Dashboard</h2>
 
-  <div *ngIf="auth.user$ | async as user">
-    {{ user | json }}
+  <div *ngIf="auth.currentUser as user">
+    <p>{{user.uid}}</p>
+    <p>{{user.email}}</p>
+    <p>{{user.displayname ? user.displayname : ''}}</p>
     <hr />
     <button (click)="auth.signOut()">Sign Out</button>
   </div>
