--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -3,5 +3,6 @@
   <div class="text-content">
     <h1 class="post-title">{{ post?.title }}</h1>
     <p class="post-body">{{ post?.body }}</p>
+    <!-- <p class="post-author">{{ post?.author }}</p> -->
   </div>
 </div>
