adjust navbar styling

--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,14 @@
-<nav class="nav-menu-component">
-    <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/item-list">Item List</a>
-    <a>page 3</a>
+<nav class="navbar-component">
+  <div class="navbar-content">
+    <div class="navbar-brand">
+      <span>ChatBlog Angular</span>
+    </div>
+    <div class="nav-links">
+      <a routerLink="/post-list" class="nav-link">Post List</a>
+      <a routerLink="/dashboard" class="nav-link">Dashboard</a>
+      <a>New Post</a>
+    </div>
+
+  </div>
+
 </nav>
