--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="item-list-component">
+<div class="post-list-component">
   <h2 class="list-title">Post List</h2>
   <div  *ngFor="let post of posts">
     <div class="item-block">
