--- a/src/app/post-list/post-list.component.scss
+++ b/src/app/post-list/post-list.component.scss
@@ -1,6 +1,6 @@
-.item-list-component{
-  padding: 1rem;
-  margin: 1rem auto;
+.post-list-component{
+  padding: 2rem;
+  margin:  auto;
   width: fit-content;
   display:flex;
   flex-direction: column;
