feat : set up login functionality

--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div routerLink="/posts/{{post?.id}}" class="post-card">
+<div routerLink="/posts/{{post.id}}" class="post-card">
   <div class="card-content">
     <img class="image" src="{{ post.image }}" alt="" />
     <h3>{{ post.title }}</h3>
