--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,26 @@
 <div class="login-component">
-  <form>
-    <label>
-      <p>Username</p>
-      <input type="text" />
-    </label>
-    <label>
-      <p>Password</p>
-      <input type="password" />
-    </label>
+  <h1 class="form-title">Log In</h1>
+  <form [formGroup]="logInForm" (ngSubmit)="logIn()">
+    <div class="form-block">
+      <label for="username">Username:</label>
+      <input
+        id="username"
+        type="text"
+        placeholder="username"
+        formControlName="username"
+        required
+      />
+    </div>
+    <div class="form-block">
+      <label for="password">Password:</label>
+      <input
+        id="password"
+        type="password"
+        placeholder="password"
+        formControlName="password"
+        required
+      />
+    </div>
     <div>
       <button type="submit">Login</button>
     </div>
