feat: create multiple components with styling
navbar, new-post, signup, login

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,11 +4,11 @@
       <span>ChatBlog Angular</span>
     </div>
     <div class="nav-links">
+      <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
       <a routerLink="/dashboard" class="nav-link">Dashboard</a>
-      <a>New Post</a>
+      <a routerLink="/signup" class="nav-link">Sign Up</a>
+      <a routerLink="/login" class="nav-link">Log In</a>
     </div>
-
   </div>
-
 </nav>
