--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,9 +1,14 @@
 <div class="post-list-component">
   <h2 class="list-title">Post List</h2>
-  <div  *ngFor="let post of posts">
-    <div class="item-block">
-      <h3>{{post.title}}</h3>
-    <p>{{post.content}}</p>
+  <div class="list">
+    <div *ngFor="let post of posts">
+      <div class="post-card">
+        <div class="card-content">
+          <img class="image" src="" alt="" />
+          <h3>{{ post.title }}</h3>
+          <p>{{ post.content }}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
