--- a/src/app/post-list/post-list.component.scss
+++ b/src/app/post-list/post-list.component.scss
@@ -1,30 +1,40 @@
-.post-list-component{
-  padding: 2rem;
-  margin:  auto;
-  width: fit-content;
-  display:flex;
+.post-list-component {
+  display: flex;
   flex-direction: column;
+  padding: 4rem 2rem;
+  margin: auto;
+  max-width: 45rem;
 
-  .list-title{
+  .list-title {
+    padding: 1rem;
     margin: auto;
   }
 
-  .item-block{
-    padding: 1rem;
-    margin: 0.5rem;
-    width: 10rem;
-    border:0.1rem;
-    border-color:lightgrey;
-    border-style: solid;
-  }
-  .list-switch {
-    padding: 1rem;
-    margin: auto;
-    background-color: lightblue;
-    border: none;
-    border-radius: 0.5rem;
-    &:active {
-      background-color: lightgrey;
+  .list {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    .post-card {
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      box-shadow: none;
+      border: 0.1rem solid lightgray;
+
+      &:hover {
+        box-shadow: 0px 0px 5px lightgrey;
+      }
+      .image {
+        height: 5rem;
+        width: 10rem;
+      }
+      .card-content {
+        margin: auto;
+        text-align: center;
+      }
     }
   }
 }
