feat : get comment and post authors

--- a/src/app/comment-list/comment-list.component.html
+++ b/src/app/comment-list/comment-list.component.html
@@ -4,6 +4,7 @@
     <div class="card-container" *ngFor="let comment of comments">
       <div class="card-content">
         <p>{{ comment.body }}</p>
+        <p>{{author}}</p>
       </div>
     </div>
   </div>
