--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -3,7 +3,7 @@
   <div class="text-content">
     <h1 class="post-title">{{ post?.title }}</h1>
     <p class="post-body">{{ post?.body }}</p>
-    <!-- <p class="post-author">{{ post?.author }}</p> -->
+    <p class="post-author">{{ author}}</p>
   </div>
   <hr>
   <div>
