--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,13 +7,13 @@
       <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
       <a routerLink="/dashboard" class="nav-link">Dashboard</a>
-      <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+      <!-- <ng-container *ngIf="afAuth.user | async; else loggedOut">
         <a (click)="logout()" class="nav-link">Log out</a>
       </ng-container>
 
       <ng-template #loggedOut>
         <a (click)="login()" class="nav-link">Log in</a>
-      </ng-template>
+      </ng-template> -->
     </div>
   </div>
 </nav>
