--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -5,4 +5,9 @@
     <p class="post-body">{{ post?.body }}</p>
     <!-- <p class="post-author">{{ post?.author }}</p> -->
   </div>
+  <hr>
+  <div>
+    <app-comment-list></app-comment-list>
+    <app-new-comment></app-new-comment>
+  </div>
 </div>
