--- a/src/app/post-detail/post-detail.component.scss
+++ b/src/app/post-detail/post-detail.component.scss
@@ -1,7 +1,7 @@
 .post-detail-component {
   display: flex;
   flex-direction: column;
-  padding: 4rem 0;
+  padding: 4rem 2rem;
 
   .image {
       margin: auto;
