--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -3,6 +3,6 @@
     <img class="image" src="{{ post.image }}" alt="" />
     <h3>{{ post.title }}</h3>
     <p>{{ post.body }}</p>
-    <p>{{ author }}</p>
+    <p>{{ post.author }}</p>
   </div>
 </div>
