--- a/src/app/components/comment-list/comment-list.component.scss
+++ b/src/app/components/comment-list/comment-list.component.scss
@@ -23,20 +23,26 @@
 
       .comment-header {
         width: 100%;
-        height: 2rem;
         background-color: #355591;
         color: white;
         font-size: 0.8rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
-        .header-content {
-          padding: 0.5rem;
+        .header-content{
+          padding-left:1rem;
+          padding-right:1rem;
         }
+      }
+      .comment-text {
+        padding:1rem;
       }
     }
     .comment-card:first-of-type {
       border-radius: 0.5rem 0.5rem 0rem 0rem;
 
-      .comment-header{
+      .comment-header {
         border-radius: 0.5rem 0.5rem 0rem 0rem;
       }
     }
