--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding: 4rem 2rem;
   margin: auto;
+  max-width: 45rem;
 
   .dashboard-header {
     display: flex;
@@ -13,6 +14,7 @@
     .buttons {
       display: flex;
       flex-direction: column;
+      gap: 2rem;
       .edit-btn {
         height: 2rem;
         width: 6rem;
