--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,5 +1,13 @@
 <div class="post-list-component">
   <h2 class="list-title">Post List</h2>
+  <div class="search-bar">
+    <input
+      [(ngModel)]="searchTerm"
+      (ngModelChange)="searchBar()"
+      type="text"
+      id="search"
+    />
+  </div>
   <div class="list">
     <div class="card-container" *ngFor="let post of posts">
       <app-post-card
