--- a/src/app/post-list/post-list.component.scss
+++ b/src/app/post-list/post-list.component.scss
@@ -5,6 +5,16 @@
   margin: auto;
   max-width: 45rem;
 
+  .search-bar {
+    margin: 2rem auto;
+    input {
+      border-radius: 0.5rem;
+      border: 1px solid grey;
+      width: 20rem;
+      height: 2rem;
+    }
+  }
+
   .list-title {
     padding: 1rem;
     margin: auto;
