feat : sort lists by createdAt date, add post validation on create and update, add image url validation

--- a/src/app/new-post/new-post.component.scss
+++ b/src/app/new-post/new-post.component.scss
@@ -44,6 +44,12 @@
       background-color:skyblue;
       border: none;
       border-radius: 0.5rem;
+      cursor: pointer;
+
+      &:disabled{
+       opacity: 50%;
+        cursor: default;
+      }
     }
   }
 }
