--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -70,6 +70,11 @@
         border: none;
         border-radius: 0.5rem;
         cursor: pointer;
+
+        &:disabled{
+          opacity: 50%;
+           cursor: default;
+         }
       }
     }
     .profile-read {
