--- a/src/app/new-comment/new-comment.component.scss
+++ b/src/app/new-comment/new-comment.component.scss
@@ -31,6 +31,11 @@
       background-color:skyblue;
       border: none;
       border-radius: 0.5rem;
+
+      &:disabled{
+        opacity: 50%;
+         cursor: default;
+       }
     }
   }
 }
