--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -8,27 +8,58 @@
     <div class="form-block">
       <label for="title">Title:</label>
       <input
-      class="title-input"
+        class="title-input"
         id="title"
         type="text"
         formControlName="title"
       />
+      <div
+        *ngIf="
+          newPostForm.controls['title'].invalid &&
+          (newPostForm.controls['title'].dirty ||
+            newPostForm.controls['title'].touched)
+        "
+      >
+        <div *ngIf="newPostForm.controls['title'].invalid">
+          Please enter title
+        </div>
+      </div>
     </div>
     <div class="form-block">
       <label for="body">Body:</label>
-      <textarea class="body-input" id="body" type="text" formControlName="body"></textarea>
+      <textarea
+        class="body-input"
+        id="body"
+        type="text"
+        formControlName="body"
+      ></textarea>
+      <div
+        *ngIf="
+          newPostForm.controls['body'].invalid &&
+          (newPostForm.controls['body'].dirty ||
+            newPostForm.controls['body'].touched)
+        "
+      >
+        <div *ngIf="newPostForm.controls['body'].invalid">
+          Please enter post body
+        </div>
+      </div>
     </div>
     <div class="form-block">
       <label for="image">Image link:</label>
       <input
-      class="image-input"
+        class="image-input"
         id="image"
         type="text"
         formControlName="image"
       />
+
+      <div *ngIf="imageValidation === false">Please enter valid image url</div>
     </div>
 
-    <button class="publish-btn" type="submit">Publish</button>
+    <button class="publish-btn" type="submit" [disabled]="!newPostForm.valid">
+      Publish
+    </button>
   </form>
 
   <div *ngIf="success">Successfully submitted post.</div>
