wip set up nodejs service

--- a/src/app/components/new-post/new-post.component.html
+++ b/src/app/components/new-post/new-post.component.html
@@ -3,7 +3,7 @@
   <form
     class="new-post-form"
     [formGroup]="newPostForm"
-    (ngSubmit)="createPost()"
+    (ngSubmit)="createNodePost()"
   >
     <div class="form-block">
       <label for="title">Title:</label>
