--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -1,8 +1,8 @@
 <div class="post-detail-component">
-  <img class="image" src="{{ post.image }}" alt="" />
+  <img class="image" src="{{ post.image}}" alt="" />
   <div class="text-content">
     <h1 class="post-title">{{ post.title }}</h1>
-    <p class="post-createdAt">{{ post.createdAt?.toDate() | date: 'medium'}}</p>
+    <p class="post-createdAt">{{ post.createdAt | date: 'medium'}}</p>
     <p class="post-body">{{ post.body }}</p>
     <p class="post-author">{{ author}}</p>
   </div>
