--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,8 +5,6 @@
       <button class="edit-btn" (click)="editBtn()">Edit Profile</button>
       <button class="signout-btn" (click)="auth.signOut()">Sign Out</button>
     </div>
-
-
   </div>
 
   <div *ngIf="currentUser as user">
@@ -78,5 +76,6 @@
       </ng-template>
     </div>
 
+    <app-user-posts [posts]="posts"></app-user-posts>
   </div>
 </div>
