--- a/src/app/components/post-card/post-card.component.html
+++ b/src/app/components/post-card/post-card.component.html
@@ -3,6 +3,6 @@
     <img class="image" src="{{ post.image }}" alt="" />
     <h3>{{ post.title }}</h3>
     <p>{{ (post.body.length>10)? (post.body | slice:0:100)+'...':(post.body) }}</p>
-    <p>{{ post.author }}</p>
+    <p>{{ post.author.username }}</p>
   </div>
 </div>
