refactor: fix html warnings

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar-component">
   <div class="navbar-content">
     <div class="navbar-brand">
-      <a routerLink="/">ChatBlog Angular</a>
+      <a routerLink="/">Chatter Angular</a>
     </div>
     <button
       [class.collapsed]="isCollapsed"
