--- a/src/app/components/post-edit/post-edit.component.html
+++ b/src/app/components/post-edit/post-edit.component.html
@@ -1,5 +1,5 @@
 <div class="post-edit-component">
-  <img class="image" src="{{ post?.image }}" alt="" />
+  <img class="image" src="{{ post.image }}" alt="" />
 
   <form
     class="update-post-form"
