--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,76 @@
-.dashboard-component{
+.dashboard-component {
   display: flex;
   flex-direction: column;
   padding: 4rem 2rem;
   margin: auto;
+
+  .dashboard-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem;
+
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      .edit-btn {
+        height: 2rem;
+        width: 6rem;
+        border: none;
+        color: white;
+        border-radius: 0.5rem;
+        justify-content: flex-end;
+        margin: auto 0 auto 0;
+        background-color: green;
+        cursor: pointer;
+      }
+      .signout-btn {
+        height: 2rem;
+        width: 6rem;
+        border: none;
+        color: white;
+        border-radius: 0.5rem;
+        justify-content: flex-end;
+        margin: auto 0 auto 0;
+        background-color: red;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .profile-data-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem;
+    .edit-profile-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .form-block {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        .edit-input {
+          width: 15rem;
+          height: 2rem;
+          border: 1px solid skyblue;
+          border-radius: 0.5rem;
+        }
+      }
+      .publish-btn {
+        width: 10rem;
+        height: 2rem;
+        color: white;
+        background-color: skyblue;
+        border: none;
+        border-radius: 0.5rem;
+        cursor: pointer;
+      }
+    }
+    .profile-read {
+    }
+  }
 }
