--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -1,10 +1,10 @@
-<div class="post-detail-component">
-  <img class="image" src="{{ post.image}}" alt="" />
+<div *ngIf="post" class="post-detail-component">
+  <img class="image" src="{{ post.image ?? './assets/placeholder.png' }}" alt="" />
   <div class="text-content">
     <h1 class="post-title">{{ post.title }}</h1>
-    <p class="post-createdAt">{{ post.createdAt | date: 'medium'}}</p>
+    <p class="post-created_at">{{ post.created_at | date : "medium" }}</p>
     <p class="post-body">{{ post.body }}</p>
-    <p class="post-author">{{ post.author?.username}}</p>
+    <p class="post-author">{{ post.author.username }}</p>
   </div>
   <div>
     <app-comment-list></app-comment-list>
