--- a/src/app/components/post-detail/post-detail.component.scss
+++ b/src/app/components/post-detail/post-detail.component.scss
@@ -4,23 +4,20 @@
   padding: 6rem 2rem;
 
   .image {
-      margin: auto;
-      height: 10rem;
-      width: 20rem;
-    }
-
-  .text-content{
-      margin: auto;
-      width: 40rem;
-
-      .post-title {
-
-      }
-
-      .post-body {
-
-      }
-
+    margin: auto;
+    height: 10rem;
+    width: 20rem;
   }
 
+  .text-content {
+    margin: auto;
+    max-width: 40rem;
+    padding: 2rem;
+    .post-title {
+    }
+
+    .post-body {
+      width: auto;
+    }
+  }
 }
