--- a/src/app/components/image-gallery/image-gallery.component.html
+++ b/src/app/components/image-gallery/image-gallery.component.html
@@ -1,13 +1,15 @@
 <div class="image-gallery-component">
   <div class="gallery">
     <h2 class="gallery-title">Images</h2>
-    <div class="grid">
+    <div *ngIf="images; else noImagesMessage" class="grid">
       <div *ngFor="let imageUrl of images">
         <div class="image-container">
           <img class="image" src="{{ imageUrl }}" alt="" />
         </div>
       </div>
     </div>
+    <ng-template #noImagesMessage>No images here!</ng-template>
+
   </div>
   <div class="file-upload">
     <label for="fileUpload">Choose a File</label>
