--- a/src/app/components/image-gallery/image-gallery.component.scss
+++ b/src/app/components/image-gallery/image-gallery.component.scss
@@ -29,7 +29,8 @@
       padding: 2rem;
       justify-content: center;
       .image-container {
-        width: 10rem;
+        width: 15rem;
+        contain-intrinsic-height: 10rem;
         border-radius: 5%;
         padding: 0.5rem;
         padding-bottom: 1rem;
