--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -5,7 +5,7 @@
       <div class="message-card" *ngFor="let message of messageList | slice : 1">
         <div class="message-header">
           <p class="header-content">
-            {{ message.author?.username ?? "Anonymous" }}
+            {{ message.author.username ?? "Anonymous" }}
           </p>
         </div>
         <p class="message-text">
