--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -2,11 +2,11 @@
   <img class="image" src="{{ post.image ?? './assets/placeholder.png' }}" alt="" />
   <div class="text-content">
     <h1 class="post-title">{{ post.title }}</h1>
-    <p class="post-created_at">{{ post.created_at | date : "medium" }}</p>
+    <p class="post-created_at">{{ post.createdAt | date : "medium" }}</p>
     <p class="post-body">{{ post.body }}</p>
     <p class="post-author">{{ post.author.username }}</p>
   </div>
   <div>
-    <app-comment-list></app-comment-list>
+<!--    <app-comment-list></app-comment-list>-->
   </div>
 </div>
