feat: set up image gallery, render images from storage

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,7 @@
     <div class="nav-links">
       <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
+      <a routerLink="/images" class="nav-link">Images</a>
       <ng-container *ngIf="afAuth.user | async; else loggedOut">
         <a routerLink="/dashboard" class="nav-link">Dashboard</a>
       </ng-container>
@@ -35,6 +36,7 @@
     <div class="mobile-links">
       <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
+      <a routerLink="/images" class="nav-link">Images</a>
       <ng-container *ngIf="afAuth.user | async; else loggedOut">
         <a routerLink="/dashboard" class="nav-link">Dashboard</a>
       </ng-container>
