--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
       <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
       <a routerLink="/images" class="nav-link">Images</a>
-      <ng-container *ngIf="afAuth.user | async; else loggedOut">
+      <ng-container *ngIf="afAuth.currentUser; else loggedOut">
         <a routerLink="/dashboard" class="nav-link">Dashboard</a>
       </ng-container>
 
@@ -37,7 +37,7 @@
       <a routerLink="/new-post" class="nav-link">New Post</a>
       <a routerLink="/post-list" class="nav-link">Post List</a>
       <a routerLink="/images" class="nav-link">Images</a>
-      <ng-container *ngIf="afAuth.user | async; else loggedOut">
+      <ng-container *ngIf="afAuth.currentUser; else loggedOut">
         <a routerLink="/dashboard" class="nav-link">Dashboard</a>
       </ng-container>
 
