--- a/src/app/components/comment-list/comment-list.component.html
+++ b/src/app/components/comment-list/comment-list.component.html
@@ -1,13 +1,13 @@
 <div class="comment-list-component">
   <h2 class="list-title">Comments</h2>
   <div class="list">
-    <div *ngIf="comments.length > 0; else noComments">
+    <div *ngIf="comments$ | async as comments; else noComments">
       <div class="comment-card" *ngFor="let comment of comments">
         <div class="comment-header">
-            <p class="header-content">{{ comment.author.username }}</p>
-            <p class="header-content">
-              {{ comment.createdAt | date : "medium" }}
-            </p>
+          <p class="header-content">{{ comment.author?.username }}</p>
+          <p class="header-content">
+            {{ comment.createdAt | date : 'medium' }}
+          </p>
         </div>
         <p class="comment-text">{{ comment.body }}</p>
       </div>
@@ -16,4 +16,6 @@
       <p class="no-comment-msg">Be the first to leave a comment!</p>
     </ng-template>
   </div>
+  <app-new-comment (onNewComment)="getComments()"></app-new-comment>
+
 </div>
