--- a/src/app/components/user-posts/user-posts.component.html
+++ b/src/app/components/user-posts/user-posts.component.html
@@ -1,18 +1,23 @@
 <div class="user-posts-component">
   <h2 class="list-title">Post List</h2>
   <div class="list">
-    <div class="card-container" *ngFor="let post of posts">
-      <div class="post-card">
-        <div class="card-content">
-          <p>{{ post.title }}</p>
-          <div class="buttons">
-            <button class="edit-btn" (click)="editPost(post.id)">Edit</button>
-            <button class="delete-btn" (click)="deletePost(post.id)">
-              Delete
-            </button>
+    <div *ngIf="userPosts | async as userPosts; else noPosts">
+      <div class="card-container" *ngFor="let post of userPosts">
+        <div class="post-card">
+          <div class="card-content">
+            <p>{{ post.title }}</p>
+            <div class="buttons">
+              <button class="edit-btn" (click)="editPost(post.id)">Edit</button>
+              <button class="delete-btn" (click)="deletePost(post.id)">
+                Delete
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <ng-template #noPosts>
+      <p class="no-post-msg">This user has no posts!</p>
+    </ng-template>
   </div>
 </div>
