feat : add multiple file upload option

--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -1,6 +1,6 @@
 <div class="file-upload-component">
   <h1>File Upload</h1>
   <label for="fileUpload">Choose a File</label>
-  <input id="fileUpload" type="file" #upload />
+  <input id="fileUpload" type="file" #upload multiple/>
   <button (click)="uploadFile(upload)">Upload</button>
 </div>
