fix comment creation

--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -7,6 +7,6 @@
     <p class="post-author">{{ post.author.username }}</p>
   </div>
   <div>
-<!--    <app-comment-list></app-comment-list>-->
+    <app-comment-list></app-comment-list>
   </div>
 </div>
