fix: add third line to mobile menu icon

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,11 @@
       class="navbar-toggler"
       (click)="collapseMenu()"
     >
-      <span class="navbar-toggler-icon"></span>
+      <div class="navbar-toggler-icon">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </button>
 
     <div class="nav-links">
