--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -26,7 +26,7 @@
 
       svg {
         height: 100%;
-        width: "auto";
+        width: 'auto';
         padding-right: 1rem;
         color: white;
       }
@@ -88,7 +88,6 @@ a {
   }
   &.collapsed {
     right: -100%;
-
   }
 }
 
@@ -110,27 +109,22 @@ a {
     width: 1.5em;
     height: 1.5em;
     vertical-align: middle;
-    content: "";
+    content: '';
     background: no-repeat center center;
     background-size: 100% 100%;
-    &::before {
+    .line {
       display: block;
-      width: 1.5em;
-      height: 0.25em;
+      width: 1.5rem;
+      height: 0.25rem;
       background-color: white;
       border-radius: 0.25rem;
-      content: "";
+      content: '';
       transition: all 0.3s ease;
-    }
-    &::after {
-      display: block;
-      width: 1.5em;
-      height: 0.25em;
-      margin-top: 0.5em;
-      background-color: white;
-      border-radius: 0.25rem;
-      content: "";
-      transition: all 0.3s ease;
+
+      &:not(:last-of-type) {
+      margin-bottom: 0.25rem;
+
+      }
     }
   }
 }
