--- a/src/app/components/comment-list/comment-list.component.scss
+++ b/src/app/components/comment-list/comment-list.component.scss
@@ -17,8 +17,8 @@
 
     .comment-card {
       display: flex;
+      background-color: white;
       flex-direction: column;
-      border: 1px solid lightgrey;
       box-shadow: none;
 
       .comment-header {
