--- a/src/app/components/post-card/post-card.component.scss
+++ b/src/app/components/post-card/post-card.component.scss
@@ -1,19 +1,21 @@
 .post-card {
   display: flex;
+  background-color: white;
   flex-direction: column;
   padding: 1rem;
   border: none;
   border-radius: 0.5rem;
-  box-shadow: none;
-  border: 0.1rem solid lightgray;
 
   &:hover {
-    box-shadow: 0px 0px 5px lightgrey;
+    cursor: pointer;
+    box-shadow: 0 0 5px lightgrey;
   }
+
   .image {
     height: 5rem;
     width: 10rem;
   }
+
   .card-content {
     margin: auto;
     text-align: center;
