--- a/src/app/components/post-detail/post-detail.component.html
+++ b/src/app/components/post-detail/post-detail.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="post" class="post-detail-component">
-  <img class="image" src="{{ post.image ?? './assets/placeholder.png' }}" alt="" />
-  <div class="text-content">
-    <h1 class="post-title">{{ post.title }}</h1>
-    <p class="post-created_at">{{ post.createdAt | date : "medium" }}</p>
-    <p class="post-body">{{ post.body }}</p>
-    <p class="post-author">{{ post.author.username }}</p>
+  <div class="post-container">
+    <img class="image" src="{{ post.image ?? './assets/placeholder.png' }}" alt="" />
+    <div class="text-content">
+      <h1>{{ post.title }}</h1>
+      <p>{{ post.createdAt | date : "medium" }}</p>
+      <p>{{ post.body }}</p>
+      <p>{{ post.author.username }}</p>
+    </div>
   </div>
   <div>
     <app-comment-list></app-comment-list>
