--- a/src/app/components/post-list/post-list.component.scss
+++ b/src/app/components/post-list/post-list.component.scss
@@ -29,29 +29,9 @@
 
   .list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 2rem;
-
-    .post-card {
-      display: flex;
-      flex-direction: column;
-      padding: 1rem;
-      border: none;
-      border-radius: 0.5rem;
-      box-shadow: none;
-      border: 0.1rem solid lightgray;
-
-      &:hover {
-        box-shadow: 0px 0px 5px lightgrey;
-      }
-      .image {
-        height: 5rem;
-        width: 10rem;
-      }
-      .card-content {
-        margin: auto;
-        text-align: center;
-      }
-    }
+    justify-content: center;
   }
 }
