--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,19 @@
-body {
-  font-family: Arial, sans-serif;
+html {
+  height: 100%;
+  min-height: 100%;
   margin: 0;
+
+  body {
+    margin: 0;
+    background-color: #EAF5FDFF;
+    font-family: "Calibri", sans-serif;
+    padding: 0;
+    min-height: 100vh;
+    height: 100%;
+    overflow-x: hidden;
+
+    a {
+      text-decoration: none;
+    }
+  }
 }
